fixed a view issue on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,9 @@ $primary-color: yellow;
 $page-standard-height:80vh;
 
 html,body{
+  margin:0;
   width:100%;
+  height:100%;
   background-color: $primary-color;
   overflow:hidden;
 }
